bloodc/src/parser/snapshots/bloodc__parser__tests__missing_semicolon.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected `;`, found keyword `let`", span: Span { start: 19, end: 22, start_line: 1, start_col: 20 }, labels: [], suggestions: [], source_file: None, source_content: None }]
