bloodc/src/parser/snapshots/bloodc__parser__tests__nested_tuple_index.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected field name or index, found float literal", span: Span { start: 16, end: 19, start_line: 1, start_col: 17 }, labels: [], suggestions: [], source_file: None, source_content: None }]
